# mcp-duck-search

./: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  search.py  start.sh  test_main.py
.github/workflows/: ci.yml  docker-image.yml
searxng/: settings.yml
